# AKA-Messaging-App

./: .env  Cargo.toml  README.md  aka_messaging_app-schema.sql  aka_messaging_app.sql  conversation.json  index.html  lib.rs  main.rs  package.json  script.js  styles.css  text.json  users.json
AKA-Messaging-App-main/: .env  README.md  text.json  users.json
AKA-Messaging-App-main/front-end/: create_new_user.html  login.html  script3.js  styles.css  user_homepage.html
AKA-Messaging-App-main/src/: main.rs  models.rs
UserProfile/: UserProfile.css
aka-messaging-app-vite-build/: package-lock.json  package.json
aka-messaging-app-vite-build/src/: main.jsx
front-end/: ApiClient.js  UserProfile.jsx  create_user.html  index.html  login.html  script.js  script2.js  script3.js  script4.js  user_homepage.html
migrations/2024-03-04-054210_create_posts/: up.sql
migrations/2024-05-13-102930_create_posts/: up.sql
rust/: .env  Cargo.toml  conversation.json  text.json  users.json
rust/migrations/2024-03-04-054210_create_posts/: down.sql  up.sql
rust/migrations/2024-05-13-102930_create_posts/: down.sql  up.sql
rust/src/: error.rs  lib.rs  main.rs  models.rs  router.rs  schema.rs
rust/src/database/: establish_connection.rs  models.rs
rust/src/migrations/2024-03-23-203018_create_posts/: up.sql
rust/src/routes/: mod.rs  root.rs
rust/src/routes/conversations/: create_conversation.rs  list_conversations.rs  mod.rs
rust/src/routes/messages/: create_message.rs  list_messages.rs  mod.rs
rust/src/routes/users/: create_user.rs  login.rs  mod.rs  search.rs
rust/tests/: quick_dev.rs
src/: Cargo.toml  lib.rs  main.rs  main2  main2.rs  models.rs  router.rs  schema.rs
src/components/AboutUs/: aboutus.jsx
src/components/AccessForbidden/: AccessForbidden.jsx
src/components/AdminPanel/: adminPanel.css
src/components/App/: App.jsx
src/components/Chat/: Messages.jsx  SideBar.jsx  chat.css  chat.jsx  conversation.jsx  conversations.jsx  message.jsx  messageContainer.jsx  messageInput.jsx  searchInput.css  searchInput.jsx
src/components/ForgotPassword/: verify_code.jsx
src/routes/users/: mod.rs
src/src/: router.rs
vite-project/: README.md  package-lock.json  package.json  tailwind.config.js
vite-project/src/: index.css  main.jsx
(+73 files in other folders)
