[package]
name = "http-server-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum =  "0.7.4"
chrono = "0.4.34"
diesel = { version = "2.1.4", features = ["postgres"] }
dotenvy = "0.15.7"
bcrypt = "0.10"
lettre = "0.10"
lettre_email = "*"
rand = "0.8.5"

httptest = "0.15.5"
postgres = "0.19.7"
serde = { version = "1.0.197", features = ["derive"] }
serde-jsonlines = "0.4.0"
serde_json = "1.0.68"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors","trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
actix-rt = "*"

[dev-dependencies]
tokio-test = "*"
anyhow = "1"
httpc-test = "0.1.1"